Correction sur le module pour qu'il supporte les listes à puces dans les contenus éditables (corrigent le bug d'affichage et le bug de duplication du dernier module invisible)

--- a/api/global.css
+++ b/api/global.css
@@ -416,7 +416,7 @@ input[type="reset"].unstyled:focus {
 
 
 /* Module */
-.module li:last-child { display: none; }
+.module > li:last-child { display: none; }
 
 
 /* Bouton */
